# Crash

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.ps1  crash_design_doc.md
.github/workflows/: build.yml
docs/: licensing.md
src/: DragDrop.cpp  DragDrop.h  Enumerator.cpp  Enumerator.h  FileEntry.h  GraphicsDevice.cpp  GraphicsDevice.h  IconCache.cpp  IconCache.h  License.cpp  License.h  Session.cpp  Session.h  Settings.cpp  Settings.h  ShellContextMenu.cpp  ShellContextMenu.h  Theme.h  ThumbnailCache.cpp  ThumbnailCache.h  VirtualListView.cpp  VirtualListView.h  common.h  main.cpp
tools/: crashlicense.cpp
